# ops-copilot2

./: .gitignore  README.md  pyproject.toml
app/api/routers/: operations.py
frontend/: app.js  index.html  style.css
frontend/js/ui/: actions.js
tests/: test_api.py  test_emergency_router.py
